# ImageToLatex

./: .gitignore  README.md  setup.sh
.github/ISSUE_TEMPLATE/: task.md
data_generator/: latex_sequence.ml  latex_sequence.mli
generator/: README.md
generator/src/lib/: .merlin  dune  generators.ml
generator/src/lib/.lib.objs/: generators.ml.d  lib.cmi  lib.cmo  lib.cmt  lib.cmx  lib__Generators.cmi  lib__Generators.cmo  lib__Generators.cmt  lib__Generators.cmx
generator/src/lib/components/: .merlin  dune  instances.ml  instances.mli  operators.ml  operators.mli  structures.ml  structures.mli
generator/src/lib/components/.components.objs/: components.cmi  components.cmo  components.cmt  components.cmx  components__Functions.cmi  components__Functions.cmti  components__Functions.cmx  components__Instances.cmi  components__Instances.cmti  components__Instances.cmx  components__Operators.cmi  components__Operators.cmti  components__Operators.cmx  components__Structures.cmi  components__Structures.cmti  components__Structures.cmx  functions.ml.d  functions.mli.d  instances.ml.all-deps  instances.ml.d  instances.mli.d  operators.ml.all-deps  operators.ml.d  operators.mli.d  structures.ml.d  structures.mli.d
generator/src/lib/latex/: .merlin  syntax.mli
generator/src/lib/latex/.latex.objs/: latex.cmi  latex.cmo  latex.cmt  latex.cmx  latex__Syntax.cmi  latex__Syntax.cmti  latex__Syntax.cmx  syntax.ml.d  syntax.mli.d
generator/src/test/.test.eobjs/: test.cmi  test.cmo  test.cmt  test.cmx  test.ml.d
imagetolatex/: dataset.py  encoding.py  model.py  sequence.py  utils.py
imagetolatex/dataset/: split.py
latex/: latex.ml  latex.sh
latex/src/: build.sh  generators.ml  test.out
latex/src/scripts/: l1_1.ml
latex/src/scripts/l1_1/: l1_1.ml
latex/src/scripts/l1_2/: l1_2.ml
latex/src/syntax/: syntax.ml
latex/src/syntax/types/: instances.ml  instances.mli  operators.ml  operators.mli  structures.ml  structures.mli
latex/syntax/: syntax.ml
latex/syntax/builders/: functions.ml  operators.ml  structures.ml
latex_expressions_generator/src/: .merlin  batcher.sh  build.sh  run.py
latex_expressions_generator/src/latex/types/: functions.ml  functions.mli  operators.ml  structures.ml
latex_expressions_generator/src/scripts/: generators.ml
latex_expressions_generator/src/scripts/l1_1/: l1_1.ml
latex_expressions_generator/src/scripts/l1_2/: l1_2.ml  test.in
model/: model.py
tools/latex_lexer/: .gitignore  README.md
tools/latex_lexer/lib/: dune  helpers.ml  types.ml
tools/latex_lexer/test/: dune  test_helpers.ml
tools/lexer/: README.md  dune
tools/lexer/lib/: dune  latex.ml  parser.ml
tools/lexer/lib/syntax/: syntax.ml
tools/raw/: latex_exp.py
tools/raw/lib/components/: functions.ml  functions.mli
tools/raw/lib/latex/: dune
tools/raw/test/: dune  test.ml
tools/set/: latex_exp.py  raw_png_generator.py  raw_tex.in  set.sh  transform.asy
tools/visual/: CMakeLists.txt  Doxyfile.in  MainPage.dox  setup.sh  setup_cv.sh
tools/visual/data/log/: log.txt
tools/visual/source/: .clang-format  clang-r.sh  main.cpp
tools/visual/source/attributes/: reportable.cpp  reportable.hpp
tools/visual/source/config/: config.hpp
tools/visual/source/effect/: effect_applicator.cpp  effect_applicator.hpp  effect_manager.cpp  effect_manager.hpp
tools/visual/source/flag_manager/: flag_manager.cpp  flag_manager.hpp
tools/visual/source/image_manager/: image_manager.cpp  image_manager.hpp
tools/visual/source/logger/: logger.cpp  logger.hpp
tools/visual/source/manager/: font_manager.cpp  font_manager.hpp  manager.hpp  texture_manager.cpp  texture_manager.hpp
tools/visual/source/math/: math.hpp
tools/visual/source/perlin_noise/: perlin_noise.cpp  perlin_noise.hpp
tools/visual/source/resource_collection/: resource_collection.cpp  resource_collection.hpp
tools/visual/source/resource_guard/: resource_guard.cpp  resource_guard.hpp
tools/visual/source/state/: state.cpp  state.hpp
tools/visual/source/tests/: math_test.cc  transform_test.cc
tools/visual/source/transform/: transform.cpp  transform.hpp
tools/visual/source/utils/: utils.hpp
visual/: CMakeLists.txt
visual/gtest/: cache_test.cc
visual/source/: main.cpp
visual/source/cache/: cache.hpp
visual/source/config/: config.hpp
visual/source/effect/: EffectManager.cpp  EffectManager.hpp
visual/source/flag_manager/: flag_manager.cpp  flag_manager.hpp
visual/source/logger/: logger.cpp  logger.hpp
visual/source/manager/: font_manager.cpp  font_manager.hpp  manager.hpp  texture_manager.cpp  texture_manager.hpp
visual/source/math/: math.hpp
visual/source/perlin_noise/: perlin_noise.cpp  perlin_noise.hpp
visual/source/raw_png/: raw_png_generator.py
visual/source/state/: state.cpp  state.hpp
visual/source/system/: system.cpp  system.hpp
